# cppGameEngine

./: .gitignore  CMakeLists.txt  README.md
assets/: SpriteSheet.frag  SpriteSheet.vert  animation.spritesheet.json
include/: app.hpp  camera.hpp  main.hpp  shader.hpp  sprite.hpp  util.hpp  vertexObject.hpp  window.hpp
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
src/: app.cpp  camera.cpp  main.cpp  shader.cpp  sprite.cpp  test.cpp  util.cpp  vertexObject.cpp  window.cpp
